add delete routes, gorm ondelete
